objects/Auto_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Additional_comments__c</fullName>
        <label>Additional comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_required_manufacturing_recordsh__c</fullName>
        <label>Identify required manufacturing recordsh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_required_retention_period__c</fullName>
        <label>Identify required retention period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_TS16949_certification_required__c</fullName>
        <label>Is TS16949 certification required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Option</label>
        <referenceTo>Customer_Requirement__c</referenceTo>
        <relationshipLabel>Auto Requirements</relationshipLabel>
        <relationshipName>Auto_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_of_pieces_for_PPAP_sample_size__c</fullName>
        <label>Quantity of pieces for PPAP sample size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selection_of_Automotive_Service__c</fullName>
        <label>Selection of Automotive Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Control Plan Required</fullName>
                </value>
                <value>
                    <fullName>Auto DFMEA Required</fullName>
                </value>
                <value>
                    <fullName>Auto PFMEA Required</fullName>
                </value>
                <value>
                    <fullName>Auto PPAP Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Auto Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Auto Requirement  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auto Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>